# medical-coding-grader

./: .dockerignore  .gitignore  BRAINSTORM.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: case_generator.py  ground_truth_cases.json
server/: Dockerfile  __init__.py  app.py  environment.py  gradio_landing.py  requirements.txt
tests/: test_env_cycle.py  test_reward.py  test_reward_hacking.py
