[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-medical-coding"
version = "0.1.0"
description = "Medical Coding Auditor environment for OpenEnv — simulates hospital pre-bill compliance review"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
# Enables: uv run --project . server
server = "medical_coding_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["medical_coding_env", "medical_coding_env.server"]
package-dir = { "medical_coding_env" = ".", "medical_coding_env.server" = "server" }

[tool.setuptools.package-data]
"medical_coding_env" = ["data/*.json"]
